lesson3/k8s-log-system/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: log-system
spec:
  mtls:
    mode: STRICT
